--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -10,6 +10,7 @@
     <h1>Meatballs</h1>
    <div>
        <img src="../images/meatballs.jpg" style="width: 600px;height: 500px;"
+            alt="meatballs"
     </div>
     <h2>Just like your moms!</h2>
     <p>Meal every person should know how to make</p>
