--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,6 +10,7 @@
     <h1>Pizza</h1>
     <div>
         <img src="../images/pizza.jpg" style="width: 600px;height: 500px;"
+             alt="pizza"
     </div>
     <h2>Mama mia!</h2>
     <p>The recipe for a true <em>Italian</em> pizza</p>
